First functional site

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
-{% block title %} Quiz Website - All Quizzes {% endblock %}
+{% block title %} NUnite - see what's happening {% endblock %}
 {% block body %}
     <div id='content'>
-        <span id='title'>All Quizzes</span>
+        <span id='title'>All Events</span>
+        <a href="{{url_for('register')}}">Sign up or log in</a>
         <ul>
-            {% for id, name in quiz_names %}
-                <li><a href="{{url_for('quiz', id=id)}}">{{name}}</a></li>
+            {% for id, name in event_names %}
+                <li><a href="{{url_for('event', id=id)}}">{{name}}</a></li>
             {% endfor %}
         </ul>
     </div>
