--- a/templates/event.html
+++ b/templates/event.html
@@ -8,7 +8,7 @@
         <form method="post" action="/join/{{id}}">
 
             <h2>{{event['name']}}</h2>
-            <strong>Type:</strong> <i>{{event['type']}}</i><br>
+            <strong>Type:</strong> <i>{{event['event_type']}}</i><br>
             <strong>Location:</strong> <i>{{event['location']}}</i><br>
             <strong>Datetime:</strong> <i>{{event['datetime']}}</i><br>
             <strong>Approve guests:</strong> <i>{{event['approve_guests']}}</i><br>
@@ -16,7 +16,7 @@
             <strong>Description:</strong> <i>{{event['description']}}</i><br>
             <br>
 
-        <input type="submit" value="Unite">
+        <input type="submit" value="UNite">
         </form>
 
         <br>
