--- a/static/style.css
+++ b/static/style.css
@@ -407,7 +407,7 @@ p {
 }
 
 .details-grid {
-    background: url(../images/banner-h.jpg) no-repeat 0px 0px;
+    background: url(images/banner-h.jpg) no-repeat 0px 0px;
     background-size: cover;
 	-webkit-background-size: cover;
 	 -moz-background-size: cover;
@@ -415,7 +415,7 @@ p {
     -o-background-size: cover;
 }
 .details-grid.gal {
-    background: url(../images/banner-g.jpg) no-repeat 0px 0px;
+    background: url(images/banner-g.jpg) no-repeat 0px 0px;
     background-size: cover;
 	-webkit-background-size: cover;
 	 -moz-background-size: cover;
@@ -423,7 +423,7 @@ p {
     -o-background-size: cover;
 }
 .details-grid.con{
-    background: url(../images/banner-c.jpg) no-repeat 0px 0px;
+    background: url(images/banner-c.jpg) no-repeat 0px 0px;
     background-size: cover;
 	-webkit-background-size: cover;
 	 -moz-background-size: cover;
@@ -431,7 +431,7 @@ p {
     -o-background-size: cover;
 }
 .details-grid.flight{
-    background: url(../images/banner-flight.jpg) no-repeat 0px 0px;
+    background: url(images/banner-flight.jpg) no-repeat 0px 0px;
     background-size: cover;
 	-webkit-background-size: cover;
 	 -moz-background-size: cover;
@@ -439,7 +439,7 @@ p {
     -o-background-size: cover;
 }
 .details-grid.tr{
-    background: url(../images/banner-tr.jpg) no-repeat 0px 0px;
+    background: url(images/banner-tr.jpg) no-repeat 0px 0px;
     background-size: cover;
 	-webkit-background-size: cover;
 	 -moz-background-size: cover;
@@ -447,7 +447,7 @@ p {
     -o-background-size: cover;
 }
 .details-grid.bus{
-    background: url(../images/banner-bus.jpg) no-repeat 0px 0px;
+    background: url(images/banner-bus.jpg) no-repeat 0px 0px;
     background-size: cover;
 	-webkit-background-size: cover;
 	 -moz-background-size: cover;
@@ -455,7 +455,7 @@ p {
     -o-background-size: cover;
 }
 .details-grid.ht{
-	  background: url(../images/banner-hotel.jpg) no-repeat 0px 0px;
+	  background: url(images/banner-hotel.jpg) no-repeat 0px 0px;
     background-size: cover;
 	-webkit-background-size: cover;
 	 -moz-background-size: cover;
@@ -463,7 +463,7 @@ p {
     -o-background-size: cover;
 }
 .details-grid.pay {
-    background: url(../images/banner-pay.jpg) no-repeat 0px 0px;
+    background: url(images/banner-pay.jpg) no-repeat 0px 0px;
     background-size: cover;
 	-webkit-background-size: cover;
 	 -moz-background-size: cover;
@@ -509,7 +509,7 @@ p {
     background: #fff;
 }
 .banner_search form input[type="submit"]{
-background: #020202 url(../images/search.png) no-repeat 17px 8px;
+background: #020202 url(images/search.png) no-repeat 17px 8px;
     width: 50px;
     height: 32px;
   border: none;
@@ -796,7 +796,7 @@ background: #020202 url(../images/search.png) no-repeat 17px 8px;
     margin-top: 10px;
 }
 .date {
-    background: url(../images/date-icon.png) no-repeat 95.5% 45% #fff;
+    background: url(images/date-icon.png) no-repeat 95.5% 45% #fff;
     cursor: pointer;
 }
 .bnr-left input[type="text"] {
@@ -868,7 +868,7 @@ background: #020202 url(../images/search.png) no-repeat 17px 8px;
 	outline:none;
 	font-size:13px;
 	color: #777;
-		background: url(../images/arrow1.png) no-repeat 93% center #ffffff;
+		background: url(images/arrow1.png) no-repeat 93% center #ffffff;
 	width:100%;
 	    padding: 12px 8px;
     -webkit-appearance: none;
@@ -881,7 +881,7 @@ font-family: 'Open Sans', sans-serif;
 	outline:none;
 	font-size:13px;
 	color: #777;
-	 background: url(../images/arrow1.png) no-repeat 93% center #ffffff;
+	 background: url(images/arrow1.png) no-repeat 93% center #ffffff;
 	width:100%;
 	    padding: 12px 8px;
 font-family: 'Open Sans', sans-serif;
@@ -892,7 +892,7 @@ font-family: 'Open Sans', sans-serif;
 	outline:none;
 	font-size:13px;
 	color: #777;
-	 background: url(../images/arrow1.png) no-repeat 93% center #ffffff;
+	 background: url(images/arrow1.png) no-repeat 93% center #ffffff;
 	width:100%;
 	    padding: 12px 8px;
 
@@ -921,7 +921,7 @@ select {
     outline: none;
     font-size: 15px;
     color: #777;
-    background: url(../images/arrow1.png) no-repeat 97% center #ffffff;
+    background: url(images/arrow1.png) no-repeat 97% center #ffffff;
     width: 99%;
     padding: 11px 45px 12px 20px;
     color: #777!important;
@@ -1357,7 +1357,7 @@ select#country3{
     padding: 8px 0 8px 10px;
     outline: none;
     border: 1px solid #e6e6e6;
-    background: url(../images/arrow1.png) no-repeat 91% center #ffffff;
+    background: url(images/arrow1.png) no-repeat 91% center #ffffff;
     -webkit-appearance: none;
     float: left;
        width: 45%;
@@ -1381,7 +1381,7 @@ select#country3 option{
     margin-bottom:15px;
 }
 .pay-form form input.card_logo[type="text"] {
-    background: url(../images/card.jpg) no-repeat 99% center #fff;
+    background: url(images/card.jpg) no-repeat 99% center #fff;
     background-size: 13% !important;
 }
 .pay-form {
@@ -1452,7 +1452,7 @@ input.text_box {
     margin-top: 15px !important;
 }
 .pay-form p span{
-	 background: url(../images/lock1.png) no-repeat 0px 0px;
+	 background: url(images/lock1.png) no-repeat 0px 0px;
 	 width:16px;
 	 height:16px;
 	 display:inline-block;
@@ -1761,7 +1761,7 @@ select.month{
 	outline: none;
     font-size: 15px;
     color: #777;
-    background: url(../images/arrow1.png) no-repeat 97% center #ffffff;
+    background: url(images/arrow1.png) no-repeat 97% center #ffffff;
     width: 100%;
     padding: 11px 45px 12px 20px;
     color: #777!important;
@@ -1775,7 +1775,7 @@ select.year{
 	outline: none;
     font-size: 15px;
     color: #777;
-    background: url(../images/arrow1.png) no-repeat 97% center #ffffff;
+    background: url(images/arrow1.png) no-repeat 97% center #ffffff;
    width: 100%;
     padding: 11px 45px 12px 20px;
     color: #777!important;
@@ -2318,31 +2318,31 @@ ul.social li{
   font-size: 1.5rem;
 }
 .social li a.social-linkedin i{
-	background: url(../images/img-sp.png) no-repeat -8px -230px;
+	background: url(images/img-sp.png) no-repeat -8px -230px;
     display: block;
     width: 20px;
     height: 16px;
 }
 .social li a.social-twitter i{
-	background:url(../images/img-sp.png) no-repeat -51px -236px;
+	background:url(images/img-sp.png) no-repeat -51px -236px;
     display: block;
     width: 20px;
     height: 16px;
 }
 .social li a.social-google i{
-	background:url(../images/img-sp.png) no-repeat -96px -236px;
+	background:url(images/img-sp.png) no-repeat -96px -236px;
     display: block;
     width: 20px;
     height: 16px;
 }
 .social li a.social-facebook i{
-	background:url(../images/img-sp.png) no-repeat -144px -238px;
+	background:url(images/img-sp.png) no-repeat -144px -238px;
     display: block;
     width: 20px;
     height: 16px;
 }
 .social li a.social-instagram i{
-	background:url(../images/img-sp.png) no-repeat -195px -238px;
+	background:url(images/img-sp.png) no-repeat -195px -238px;
     display: block;
     width: 20px;
     height: 16px;
@@ -2619,7 +2619,7 @@ button.mfp-arrow {
 }
 .wthree-text input[type="checkbox"]:checked+label span:first-child:before {
     content: "";
-    background: url(../images/tick.png)no-repeat;
+    background: url(images/tick.png)no-repeat;
     position: absolute;
     left: 1px;
     top: 1px;
