--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,38 @@
 <html lang="en">
     <head>
         {% block head %}
+            <meta charset utf="8">
             <title> {% block title %} {% endblock %} </title>
             <link rel=stylesheet type=text/css href="{{url_for('static', filename='style.css')}}" />
+            <!--font-awsome-css-->
+            <link rel="stylesheet" href="{{url_for('static', filename='font-awesome.min.css')}}">
+            <!--bootstrap-->
+            <link href="{{url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet" type="text/css">
+            <!--custom css-->
+            <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet" type="text/css"/>
+            <!--component-css-->
+
+
+            <script type="application/javascript" src="{{url_for('static', filename='js/jquery-2.1.4.min.js')}}"></script>
+            <!-- web-fonts -->
+            <link href='//fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
+            <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic'
+                  rel='stylesheet' type='text/css'>
+            <!-- //web-fonts -->
+            <script type="application/javascript" src="{{url_for('static', filename='js/jquery.seat-charts.js')}}"></script>
+            <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='jquery.seat-charts.css')}}">
         {% endblock head %}
     </head>
     <body>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul class=flashes>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
         {% block body %} {% endblock %}
     </body>
 </html>
