--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -7,7 +7,7 @@
 				<div class="phone-box wrap push" id="home">
 					<div class="menu-notify">
 						<div class="Profile-mid">
-							<h5 class="pro-link">NUnite</h5>
+					<a href="{{url_for('index')}}"><h5 class="pro-link">NUnite</h5></a>
 						</div>
 						
 						<div class="clearfix"></div>
@@ -27,8 +27,12 @@
 										<input type="text" name="Name" required=""/>
 										<p>Course</p>
 										<input type="text" name="Course" required=""/>
+										<p>Professor</p>
+										<input type="text" name="Professor" required=""/>
 										<p>Location</p>
 										<input type="text" name="Location" required=""/>
+										<p>Time slot</p>
+										<input type="text" name="Date_and_time" required=""/>
 										
 										
 
